# rust-videocore

./: Cargo.toml  README.md  build.rs
examples/: gles2.rs
src/: bcm_host.rs  display.rs  dispmanx.rs  image.rs  lib.rs  vchi.rs
