[package]
name          = "rpi_window"
version       = "1.0.0"
authors       = ["Sean Kerr <sean@metatomic.io>", "Lauri Gustafsson <me@gustafla.space>"]
license       = "Apache-2.0"
description   = "One line Raspberry Pi window initialization"
homepage      = "https://github.com/gustafla/dispmanx-rs"
repository    = "https://github.com/gustafla/dispmanx-rs"
readme        = "README.md"
keywords      = ["bcm", "broadcom", "raspberrypi", "rpi", "videocore"]
exclude       = [".gitignore"]
edition       = "2018"

[build-dependencies]
pkg-config = "0.3.19"
