[package]
name          = "rpi_window"
version       = "1.0.2"
authors       = ["Sean Kerr <sean@metatomic.io>", "Lauri Gustafsson <me@gustafla.space>"]
license       = "Apache-2.0"
description   = "Raspberry Pi window initialization for GPU rendering"
homepage      = "https://github.com/gustafla/rpi_window"
repository    = "https://github.com/gustafla/rpi_window"
readme        = "README.md"
keywords      = ["bcm", "broadcom", "raspberrypi", "rpi", "videocore"]
exclude       = [".gitignore"]
edition       = "2018"

[build-dependencies]
pkg-config = "0.3.19"

[dev-dependencies]
khronos-egl = { version = "4.1.0", features = ["static", "no-pkg-config"] }
